Created new form Updated database structure

--- a/Homesmart-Job-Management/Homesmart-Job-Management.csproj
+++ b/Homesmart-Job-Management/Homesmart-Job-Management.csproj
@@ -99,16 +99,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="connections.cs" />
-    <Compile Include="homefrm.cs">
+    <Compile Include="frmHome.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="homefrm.Designer.cs">
-      <DependentUpon>homefrm.cs</DependentUpon>
+    <Compile Include="frmHome.Designer.cs">
+      <DependentUpon>frmHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNewjob.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewjob.Designer.cs">
+      <DependentUpon>frmNewjob.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="homefrm.resx">
-      <DependentUpon>homefrm.cs</DependentUpon>
+    <EmbeddedResource Include="frmHome.resx">
+      <DependentUpon>frmHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewjob.resx">
+      <DependentUpon>frmNewjob.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -118,6 +127,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -132,6 +142,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo-plaster-home-specialists-w-.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
