--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Homesmart-Job-Management/connections.cs
+/Homesmart-Job-Management/login.cs
