--- a/Homesmart-Job-Management/Homesmart-Job-Management.csproj
+++ b/Homesmart-Job-Management/Homesmart-Job-Management.csproj
@@ -123,6 +123,7 @@
     <Compile Include="frmSearch.Designer.cs">
       <DependentUpon>frmSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmEditEntry.resx">
