--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Homesmart-Job-Management/connections.cs
 /Homesmart-Job-Management/login.cs
+/Homesmart-Job-Management/login.cs
